--- a/src/main/webapp/tmpl/GroupPopupView.tmpl
+++ b/src/main/webapp/tmpl/GroupPopupView.tmpl
@@ -14,7 +14,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default cancel">Cancel</button>
-					<button type="button" class="btn btn-primary create">Save</button>
+					<button type="button" class="btn btn-info create">Save</button>
 				</div>
 			</div>
 		</div>
