--- a/src/main/webapp/tmpl/MainView.tmpl
+++ b/src/main/webapp/tmpl/MainView.tmpl
@@ -3,10 +3,12 @@
 		<div class="MainView-nav">
 			<h2>Address Book</h2>
 			<button type="button" class="btn btn-default add-group">Add Group</button>
-			<button type="button" class="btn btn-default add-contact">Add Contact</button>
 		</div>
 
 		<div class="MainView-content">
+			<div class="content-container">
+
+			</div>
 		</div>
 	</div>
 </script>
@@ -34,6 +36,6 @@
 	<div class="contactId info">{{id}}</div>
 	<div class="contactName info">{{name}}</div>
 	<div class="address info">{{address}}</div>
-	<a class="info edit"><span class="edit-contact btn btn-info">Edit</span></a>
-	<a class="info delete"><span class="delete-contact btn btn-default">Delete</span></a>
+	<div class="info edit"><button class="edit-contact btn btn-info">Edit</button></div>
+	<div class="info delete"><button class="delete-contact btn btn-default">Delete</button></div>
 </script>
